Bug 164622 - FILEOPEN PPTX: only upper right half of image shown in presentation mode (only)
Summary: FILEOPEN PPTX: only upper right half of image shown in presentation mode (only)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords: filter:pptx
Depends on:
Blocks: Slide-Show
  Show dependency treegraph
 
Reported: 2025-01-07 13:18 UTC by Gerald Pfeifer
Modified: 2025-08-19 21:10 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of presentation mode (16.27 KB, image/png)
2025-01-07 13:18 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2025-01-07 13:18:46 UTC
Created attachment 198414 [details]
Screenshot of presentation mode

How to reproduce:

 1. Open attachment #197554 [details] from bug #163852.
 2. Observe how the original issue reported there has been addressed
    (see attachment #197555 [details] for how it should look like).
 3. Enter presentation mode and observe how only the upper right half
    of the image is shown (see attached screenshot).

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c034a21f359db6bd8ba7b4938d4501bbcc87e21d
CPU threads: 12; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US


The original regression is

  commit 18a81415c56f2c4c6dde248db2fb2bc382b247d8
  Author: Jenkins Build User <tdf@maggie.tdf>
  Date:   Wed Dec 6 08:34:01 2023 +0100

    source 1db193c6c744289139b1df2af0b8defcf974b238

  157238: tdf#126084 import svg image from ooxml document that use svgBlip elem. | https://gerrit.libreoffice.org/c/core/+/157238

(I'm not sure how fix from bug #163852 relates to this, which clearly
improved the situation in edit mode.)
Comment 1 m_a_riosv 2025-01-07 16:06:20 UTC
Repro
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c034a21f359db6bd8ba7b4938d4501bbcc87e21d
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Commit Notification 2025-01-20 13:48:04 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0e01a536d8173270d6a4545a861c2b0b1ba4db17

tdf#164622 - SVG: fix broken cropped svg files at metafile export

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Gerald Pfeifer 2025-01-21 13:55:44 UTC
Happy to confirm this has been address with last night's build:

  Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: f1bdc5b77406fadb97c9a54f0a06d5cafbdf0371
  CPU threads: 12; OS: Linux 6.12; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
Comment 4 Commit Notification 2025-01-22 09:16:37 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/d56b5945cb06600fba3f4e507cbbd1d3c3146439

tdf#164622 - SVG: fix broken cropped svg files at metafile export

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-08-19 21:05:56 UTC Comment hidden (off-topic)
Comment 6 Mike Kaganski 2025-08-19 21:07:22 UTC Comment hidden (off-topic)